@@ -1,6 +1,8 @@
 unreleased changes
 ==================
 
+- Changed IModelInterceptorSelector's signature and behavior (see breakingChanges.txt for details)
+
 - added metadata facility, which lets you associate some metadata with the component and access it from the call site.
 
 - removed IProxyHook interface (see breakingchanges.txt)
